Use processbuilder instead of deprecated exec